objects/Sales_Funnel__c.object
<CustomObject>
    <description>This is a repositroy for monthly reporting stats for the sales funnel metrics identified by Chris, Duke, Jeff and John</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Metric Value</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>New eTrigue Entries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total eTrigue Entries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New eTrigue Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eTrigue Converts to SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Active Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Meetings Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converts to Oppty Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Opptys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opptys in Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opptys in Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Dead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Opptys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converts to Oppty Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Campaign Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convert Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Converts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_Close_Date__c</fullName>
        <description>Date of the reporting data</description>
        <inlineHelpText>End the month end date for this entry</inlineHelpText>
        <label>Month Close Date</label>
        <type>Date</type>
    </fields>
    <label>Sales Funnel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Metric Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Funnel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>